# flet_painter_new

./: README.md  mkdocs.yml  pyproject.toml
docs/: FletPainterEditor.md  index.md
examples/flet_painter_editor_example/: pyproject.toml
examples/flet_painter_editor_example/src/: main.py
src/flet_painter_editor/: __init__.py  flet_painter_editor.py
src/flet_painter_editor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/flutter/flet_painter_editor/: README.md  pubspec.yaml
src/flutter/flet_painter_editor/lib/: flet_painter_editor.dart
src/flutter/flet_painter_editor/lib/flutter_painter/src/controllers/: painter_controller.dart
src/flutter/flet_painter_editor/lib/flutter_painter/src/controllers/settings/: object_settings.dart
src/flutter/flet_painter_editor/lib/flutter_painter/src/views/widgets/: flutter_painter.dart  object_widget.dart  text_widget.dart
src/flutter/flet_painter_editor/lib/src/: create_control.dart  flet_painter_editor.dart
